Fixed object clipped because of container

--- a/scss/container.scss
+++ b/scss/container.scss
@@ -100,6 +100,7 @@ $it-pad: $container-items-padding;
   display: flex;
   flex-wrap: wrap;
   overflow: hidden;
+  overflow: visible;
 
   &.zust-v-centered {
     align-items: center;
